Update from local workspace

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
 # Configuração de Chaves de API (Renomeie para .env)
 # O bot buscará automaticamente pela chave com o NOME DA EXCHANGE.
 # Formato: [NOME_DA_EXCHANGE]_API_KEY
+# Nota: API keys são necessárias APENAS para Live Trading.
+# Paper Trading e Backtest funcionam sem API keys.
 
-# Exemplo Binance
+# Exchange Binance (Live Trading)
 BINANCE_API_KEY=sua_chave_binance
 BINANCE_API_SECRET=sua_senha_binance
 
-# Exemplo MEXC
+# Exchange use (mexc)
 MEXC_API_KEY=sua_chave_mexc
 MEXC_API_SECRET=sua_senha_mexc
 
-# Exemplo KuCoin
+# Exchange use (kucoin)
 KUCOIN_API_KEY=sua_chave_kucoin
 KUCOIN_API_SECRET=sua_senha_kucoin
 
-# Exemplo BitShares
+# Exchange use (bitShares)
 BITSHARES_API_KEY=seu_usuario_bitshares
 BITSHARES_API_SECRET=sua_chave_privada_wif
